--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.11.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.447.0",
