--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^1.0.0",
     "waincom": "file:",
     "zod": "^3.23.8"
